# GameOfLifeCPP

./: .gitignore  CMakeLists.txt  GOFCpp.cpp  GOLCpp2D.cpp  GOLCppReduction.cpp  README.md  continuous.cpp  unparallel.cpp  unparallel.h  vectorMatrixResults.txt  vector_matrix.cpp  vector_matrix2d.cpp  vector_matrix_sync.cpp
build2/: CMakeCache.txt  GOLCpp2D  Makefile  cmake_install.cmake  unparallel
build_phi/: CMakeCache.txt  GOLCpp2D  GOLCppReduction  Makefile  cmake_install.cmake  my_phi_bash  unparallel
results/: 2Dresults.txt  2d5000Results.txt  GoL1DResults.txt  GoL2DResults.txt  GoLSyncResults.txt  reductionResults.txt  unparallelResults.txt  vector_1DResults.txt  vector_2DResults.txt  vector_sync_Results.txt
